--- a/public/index.html
+++ b/public/index.html
@@ -31,5 +31,10 @@
     -->
     <script src="%PUBLIC_URL%/js/jquery.js"></script>
     <script src="%PUBLIC_URL%/js/flipclock.js"></script>
+    <!-- <script type="text/javascript">
+        window.onbeforeunload = () => {
+            return 'Voulez-vous vraiment quitter cette page ?';
+        };
+    </script> -->
   </body>
 </html>
